[tool.poetry]
name = "optimizing_sw_ranking"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
torch = "^1.6.0"
PyMySQL = "^0.10.1"
pandas = "^1.1.3"
tqdm = "^4.50.2"
sklearn = "^0.0"
seaborn = "^0.11.0"
cvxpy = "^1.1.7"
matching = "^1.4"
networkx = "^2.5"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
